# fb_info

./: .gitignore  README.md  pyproject.toml
ffpts/: cli.py  db.py  ingest.py  ingest_awards.py  ingest_pfr.py  normalize.py  pipeline.py  queries.py  scoring.py  scraper.py  supplemental_drafts.py  trivia_replay.py  web.py
ffpts/parsers/: __init__.py  _base.py  awards_string.py  defense.py  draft.py  kicking.py  passing.py  receiving.py  returns.py  rushing.py  standings.py  year_summary_awards.py
scripts/: fetch_fixtures.py
tests/: conftest.py  test_cli.py  test_cli_new_commands.py  test_cli_trivia.py  test_db.py  test_hof_and_replay.py  test_ingest_awards.py  test_ingest_draft.py  test_ingest_pfr.py  test_ingest_player_seasons.py  test_ingest_team_seasons.py  test_normalize.py  test_parsers_awards_string.py  test_parsers_base.py  test_parsers_defense.py  test_parsers_draft.py  test_parsers_kicking.py  test_parsers_passing.py  test_parsers_receiving.py  test_parsers_returns.py  test_parsers_rushing.py  test_parsers_standings.py  test_parsers_year_summary_awards.py  test_pipeline.py  test_queries_career_filters.py  test_queries_div_int.py  test_queries_flex.py  test_queries_new_helpers.py  test_queries_pos_top.py  test_scoring.py  test_scraper.py  test_web.py
tests/fixtures/defense/: 1985.html  2023.html
tests/fixtures/draft/: 1985.html  2023.html
tests/fixtures/kicking/: 1985.html  2023.html
tests/fixtures/passing/: 1985.html  2023.html
tests/fixtures/receiving/: 1985.html  2023.html
tests/fixtures/returns/: 1985.html  2023.html
tests/fixtures/rushing/: 1985.html  2023.html
tests/fixtures/standings/: 1985.html  2023.html
