[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffpts"
version = "0.1.0"
description = "Queryable NFL player & team season stats DB scraped from Pro Football Reference, with computed Std/Half/PPR fantasy points."
requires-python = ">=3.11"
authors = [{ name = "FF-pts" }]
dependencies = [
    # Data source: nflverse via nflreadpy (returns polars DataFrames).
    # We pivoted away from scraping pro-football-reference.com after
    # discovering it sits behind Cloudflare Turnstile that blocks all
    # programmatic clients we tried (httpx, cloudscraper, curl_cffi,
    # Playwright + stealth). nflreadpy hits GitHub Releases for the
    # nflverse parquet files — no scraping, no Cloudflare.
    "nflreadpy>=0.1.5",
    # DuckDB is the storage + query engine. pyarrow is the interchange
    # format DuckDB uses to read polars DataFrames in INSERT/SELECT.
    "duckdb>=1.0",
    "pyarrow>=15.0",
    # httpx + tenacity remain for the dormant ffpts.scraper module,
    # which is preserved in case a future PFR backfill becomes feasible.
    "httpx>=0.27",
    "tenacity>=8.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
ffpts = "ffpts.cli:app"

[tool.setuptools.packages.find]
include = ["ffpts*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
